gccida/c0/put_addressof_into_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_addressof_into_stack/src/function.c:3449:40: error: unknown type name 'hash_table_0'; did you mean 'hash_table'?
void  put_addressof_into_stack( rtx r, hash_table_0 *ht) 
                                       ^~~~~~~~~~~~
                                       hash_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_addressof_into_stack/src/hashtable.h:40:19: note: 'hash_table' declared here
typedef struct ht hash_table;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_addressof_into_stack/src/function.c:3449:7: error: conflicting types for 'put_addressof_into_stack'
void  put_addressof_into_stack( rtx r, hash_table_0 *ht) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_addressof_into_stack/src/function.c:292:13: note: previous declaration is here
static void put_addressof_into_stack PARAMS ((rtx, struct hash_table *));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_addressof_into_stack/src/function.c:3457:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // [rsp+38h] [rbp-28h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_addressof_into_stack/src/function.c:3491:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_addressof_into_stack/src/function.c:3491:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_addressof_into_stack/src/function.c:3492:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_addressof_into_stack/src/function.c:3492:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), 
                 ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/put_addressof_into_stack/src/obj/function.o] Error 1
